--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,6 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `hack/generate-authors.sh`.
 
-daniela <1469@holbertonschool.com>
-danielaloperahernandez <1469@holbertonschool.com>
-KaroDev3 <karodev3@gmail.com>
+Chris Motari <chrismotari@gmail.com>
+Maryliz Munjiru Karumba <marylizkarumba791@gmail.com>
+
